# Xento

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
boot/src/: main.rs
kernel/: Cargo.toml
kernel/src/: interrupts.rs  lib.rs  pic.rs
kernel/src/task/: keyboard.rs  mod.rs  mouse.rs
src/: allocator.rs  clock.rs  cmos.rs  font.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  renderer.rs  time.rs
src/gui/: desktop.rs  mod.rs  splash.rs
src/gui/widgets/: text.rs
src/task/: calculator.rs  keyboard.rs  mod.rs  terminal.rs
userland/: Cargo.toml
userland/libs/json/: Cargo.toml
userland/libs/json/src/: lib.rs  parser.rs  serializer.rs  value.rs
userland/libs/png/: Cargo.toml
userland/libs/png/src/: ancillary_chunks.rs  bit_depth.rs  chunk.rs  chunk_type.rs  color_type.rs  enums.rs  lib.rs  pixel_type.rs  png_header.rs  scanline_iter.rs  scanlines.rs  transparency_chunk.rs
userland/libs/png/src/enums/: bit_depth.rs  chunk_type.rs  color_type.rs  compression_method.rs  filter_method.rs  filter_type.rs  interlace_method.rs  mod.rs  pixel_type.rs  transparency_chunk.rs
userland/resources/: logo.tga
userland/src/: lib.rs  renderer.rs  resources.rs
userland/src/gui/: splash.rs
