[package]
name = "xento"
version = "2023.1.0"
authors = ["kalucky0 <kalucki23@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "boot",
]

[dependencies]
bootloader = "0.10"
bit_field = "0.10"
volatile = "0.4"
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.9"
log = "0.4"
spinning_top = "0.2"
embedded-graphics = "0.7"
embedded-layout = "0.2"
ps2-mouse = "0.1"
hashbrown = "0.13"
tinytga = "0.4"
libm = "0.2"
rusttype = { version = "0.9", default-features = false, features = ["libm-math"]  }
time = { version = "0.3", default-features = false }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }

[package.metadata.bootloader]
map-physical-memory = true
minimum-framebuffer-width = 1024

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]