[package]
name = "xento"
version = "2023.1.0"
authors = ["kalucky0 <kalucki23@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "boot",
]

[dependencies]
bit_field = "0.10"
bootloader = "0.10"
fontdue = { version = "0.7", default-features = false }
hashbrown = "0.13"
libm = "0.2"
linked_list_allocator = "0.9"
log = "0.4"
pc-keyboard = "0.5"
pic8259 = "0.10"
ps2-mouse = "0.1"
spin = "0.9"
spinning_top = "0.2"
time = { version = "0.3", default-features = false }
tiny-skia = { version = "0.8", default-features = false, features = ["no-std-float" ] }
uart_16550 = "0.2"
volatile = "0.4"
x86_64 = "0.14"

[package.metadata.bootloader]
map-physical-memory = true
minimum-framebuffer-width = 1024

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]
