[package]
name = "xento"
version = "2023.1.0"
authors = ["kalucky0 <kalucki23@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "boot",
    "kernel",
    "userland",
]

[dependencies]
bootloader = "0.10"
kernel = { path = "kernel" }

[package.metadata.bootloader]
map-physical-memory = true
minimum-framebuffer-width = 1024