[package]
name = "kernel"
version = "2023.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10"
hashbrown = "0.13"
linked_list_allocator = "0.9"
log = "0.4"
pc-keyboard = "0.5"
pic8259 = "0.10"
ps2-mouse = "0.1"
spin = "0.9"
spinning_top = "0.2"
time = { version = "0.3", default-features = false }
uart_16550 = "0.2"
volatile = "0.4"
x86_64 = "0.14"
bootloader = "0.10"
userland = { path = "../userland" }

[package.metadata.bootloader]
map-physical-memory = true
minimum-framebuffer-width = 1024

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]